--- a/lib/yt_logger/web/templates/user/edit.html.eex
+++ b/lib/yt_logger/web/templates/user/edit.html.eex
@@ -1,6 +1,6 @@
-<h2>New User</h2>
+<h2>Edit User</h2>
 
 <%= render "form.html", changeset: @changeset,
-                        action: user_path(@conn, :create) %>
+                        action: user_path(@conn, :update, @user) %>
 
 <span><%= link "Back", to: user_path(@conn, :index) %></span>
