--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,2 +1,7 @@
 /* This file is for your main application scss. */
 @import "bootstrap";
+
+.btn.btn-logout{
+  padding-bottom: 15px;
+  padding-top: 14px;
+}
