--- a/lib/yt_logger/web/templates/layout/app.html.eex
+++ b/lib/yt_logger/web/templates/layout/app.html.eex
@@ -31,7 +31,10 @@
                   </li>
                 <%= user -> %>
                   <li class="nav-item">
-                    <%= link "Log out", to: session_path(@conn, :delete), class: "nav-link" %>
+                    <%= button "Log out", to: session_path(@conn, :delete), class: "btn btn-link nav-link btn-logout", method: :delete %>
+                  </li>
+                  <li class="nav-item">
+                    <%= link "Register", to: registration_path(@conn, :new), class: "nav-link" %>
                   </li>
               <% end %>
             </ul>
