--- a/lib/yt_logger/web/templates/layout/app.html.eex
+++ b/lib/yt_logger/web/templates/layout/app.html.eex
@@ -31,6 +31,9 @@
                   </li>
                 <%= user -> %>
                   <li class="nav-item">
+                    <%= link "Logger", to: page_path(@conn, :history), class: "nav-link" %>
+                  </li>
+                  <li class="nav-item">
                     <%= button "Log out", to: session_path(@conn, :delete), class: "btn btn-link nav-link btn-logout", method: :delete %>
                   </li>
               <% end %>
